--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "seedrandom": "^3.0.5",
     "tone": "^15.1.22"
   },
