--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,21 +12,15 @@
   "categories": ["music", "games", "education"],
   "icons": [
     {
-      "src": "/favicon.ico",
-      "sizes": "16x16 32x32",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "/favicon.svg",
+      "sizes": "32x32",
+      "type": "image/svg+xml"
     }
   ],
   "screenshots": [
@@ -49,21 +43,27 @@
       "short_name": "Beatdle",
       "description": "Daily beat challenges",
       "url": "/beatdle",
-      "icons": [{ "src": "/favicon.ico", "sizes": "96x96" }]
+      "icons": [
+        { "src": "/favicon.svg", "sizes": "96x96", "type": "image/svg+xml" }
+      ]
     },
     {
       "name": "Challenge Mode",
       "short_name": "Challenge",
       "description": "Progressive difficulty levels",
       "url": "/challenge",
-      "icons": [{ "src": "/favicon.ico", "sizes": "96x96" }]
+      "icons": [
+        { "src": "/favicon.svg", "sizes": "96x96", "type": "image/svg+xml" }
+      ]
     },
     {
       "name": "Jam Mode",
       "short_name": "Jam",
       "description": "Creative beat making",
       "url": "/jam",
-      "icons": [{ "src": "/favicon.ico", "sizes": "96x96" }]
+      "icons": [
+        { "src": "/favicon.svg", "sizes": "96x96", "type": "image/svg+xml" }
+      ]
     }
   ]
 }
